# inference

./: .gitignore  INSTALLATION.md  README.md  SPEED.md  bench_ours.txt  plan.md  pyproject.toml  serve.sh
.claude/hooks/: notify_kokoro.py  process_hooks.py  process_notification.py  process_post_bash.py  process_post_edit.py  process_post_prompt.py  process_pre_bash.py  process_stop.py  test_process_hooks.py  test_process_post_bash.py  test_process_post_edit.py  test_process_post_prompt.py  test_process_pre_bash.py  test_process_stop.py
prompts/: 10.path.txt  10.txt  100.path.txt  100.txt  1000.path.txt  1000.txt  10000.path.txt  10000.txt
scripts/: bench.py  build_prompts.py  download_qwen.py  grade_prompts.py  smoke_qwen3.py
skills/check-deliverables/: SKILL.md
skills/check-deliverables/scripts/: check.py
skills/conversation-feedback/: SKILL.md
skills/shush/: SKILL.md
src/inference/: __init__.py  config.py  server.py
src/inference/engine/: block_manager.py  context.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
src/inference/layers/: attention.py  moe.py  paged_attn_triton.py  quant_mxfp4.py  rmsnorm.py  rotary.py  sampler.py
src/inference/models/: __init__.py  gpt_oss.py  qwen3.py
src/inference/utils/: kv_observer.py  loader.py
src/inference/web/static/: app.js  index.html  style.css
tests/: test_block_manager.py  test_engine_smoke.py  test_server_endpoints.py  test_triton_kernel.py
