[project]
name = "claude-code-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kokoro>=0.9.4 ; sys_platform == 'linux'",
    "pydantic>=2.12.1",
    "soundfile>=0.13.1 ; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
testpaths = [".claude"]
