[project]
name = "claude-code-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "flash-attn>=2.8.3",
    "kokoro>=0.9.4 ; sys_platform == 'linux'",
    "psutil>=7.2.2",
    "pydantic>=2.12.1",
    "soundfile>=0.13.1 ; sys_platform == 'linux'",
    "sse-starlette>=3.4.1",
    "uvicorn[standard]>=0.46.0",
    "xxhash>=3.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
testpaths = [".claude"]
